# bazel-issue-reproduction

./: README.md
file-addition-deletion/: README.md
file-addition-deletion/src/main/org/example/: BUILD.bazel  Main.java
file-addition-deletion/src/test/org/example/: BUILD.bazel  MainTest.java
proto-to-proto-navigation/: .bazelproject  .gitignore  MODULE.bazel  README.md
proto-to-proto-navigation/src/main/org/callee/: BUILD.bazel  NavigableCallee.proto  NavigableCalleeEnum.proto  UnnavigableCalleeNoDeps.proto  UnnavigableCalleeNoDepsNoLibrary.proto  UnnavigableCalleeNoLibrary.proto
proto-to-proto-navigation/src/main/org/caller/: BUILD.bazel  Caller.proto
